Test other packaging
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>